docs: Sincronizar documentación - endpoint /files, paginación y validación